# rustface

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
benches/: benchmarks.rs
examples/: image_demo.rs  opencv_demo.rs
src/: lib.rs  main.rs
src/classifier/: lab_boosted_classifier.rs  mod.rs  surf_mlp_classifier.rs
src/common/: image_pyramid.rs  mod.rs
src/detector/: mod.rs
src/feat/: lab_boosted_featmap.rs  mod.rs  surf_mlp_featmap.rs
src/math/: mod.rs
src/model/: classifier.rs  lab_boosted_classifier.rs  mod.rs  surf_mlp_classifier.rs
