[package]
name = "rustface"
description = "Face detection library, based on the C++ SeetaFace engine."
version = "0.1.2"
repository = "https://github.com/atomashpolskiy/rustface"
readme = "README.md"
keywords = ["face", "detection"]
categories = ["multimedia::images", "science"]
authors = ["Andrei Tomashpolskiy <nordmann89@gmail.com>"]
license = "BSD-2-Clause"
exclude = [
    "assets/*",
]

[dependencies]
num = "0.2.0"
byteorder = "1.2.6"
rayon = "1.0.2"

[dev-dependencies]
image = "0.21.0"
imageproc = "0.18.0"
criterion = "0.2.4"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
